--- a/M2_AE51_grupal/nosotros.html
+++ b/M2_AE51_grupal/nosotros.html
@@ -72,7 +72,7 @@
         </div>            
         <div class="col-6">  
           <h3>FENIX</h3>         
-          <h5>Somos la plataforma de comercio electrónico que reúne en un solo lugar una completa oferta de millones de productos provenientes de de todo el mundo.</h5>
+          <h5>Somos la plataforma comercial que reúne en un solo lugar una completa oferta de millones de productos provenientes de de todo el mundo.</h5>
         </div>
       </div>
         
