--- a/Grupal_3_3/productos.html
+++ b/Grupal_3_3/productos.html
@@ -23,7 +23,7 @@
                 </tr>     
                 <tr>
                   <td><img id="uno" src="/img/Zapatillas adidas Nebzed super boots.jpg" alt="" > </td>
-                  <td>Zapatillas adidas Nebzed super boots</td>
+                  <td>Zapatillas adidas Nebzed SUPER BOOTS</td>
                 </tr>     
                 <tr>
                   <td><img id="uno" src="/img/Zapatilla Adidas Supernova.jpg" alt="" width="100"> </td>
