cambios realizados en proyectos

--- a/M2_AE51_grupal/seguimiento.html
+++ b/M2_AE51_grupal/seguimiento.html
@@ -34,7 +34,7 @@
       </p>
 
       <p>Copyright &copy; 2023 - Desarrollos Informáticos SA</p>
-      <p>Sara Corvalán, Guillermo Ondarza</p>
+      <p>Sara Corvalán, Guillermo Ondarza, Romina Velasco</p>
     </div>
   </footer>
 </html>
