--- a/M2_AE51_grupal/folletos.html
+++ b/M2_AE51_grupal/folletos.html
@@ -79,7 +79,7 @@
       </p>
 
       <p>Copyright &copy; 2023 - Desarrollos Informáticos SA</p>
-      <p>Sara Corvalán, Guillermo Ondarza</p>
+      <p>Sara Corvalán, Guillermo Ondarza, Romina Velasco</p>
     </div>
   </footer>
 </html>
